Library/AXL(Library)/C, C++/AXD.h

// Verify data level by word unit in Offset position of specified output contact module
//===============================================================================================//
// lModuleNo   : Number of module
// lOffset     : Offset position for output contact
// *upLevel    : 0x00 ~ 0x0FFFF(Read bit '1' means 'HIGH', Read bit '0' means 'LOW')
//===============================================================================================//
DWORD    __stdcall AxdoLevelGetOutportWord(long lModuleNo, long lOffset, DWORD *upLevel);
// Verify data level by double word unit in Offset position of specified output contact module
//===============================================================================================//
// lModuleNo   : Number of module
// lOffset     : Offset position for output contact
// *upLevel    : 0x00 ~ 0x0FFFFFFFF(Read bit '1' means 'HIGH', Read bit '0' means 'LOW')
//===============================================================================================//
DWORD    __stdcall AxdoLevelGetOutportDword(long lModuleNo, long lOffset, DWORD *upLevel);
// Set data level by bit unit in Offset position of entire output contact module
//===============================================================================================//
// lOffset     : Offset position for output contact
// uLevel      : LOW(0)
//             : HIGH(1)
//===============================================================================================//
DWORD    __stdcall AxdoLevelSetOutport(long lOffset, DWORD uLevel);
// Verify data level by bit unit in Offset position of entire output contact module
//===============================================================================================//
// lOffset     : Offset position for output contact
// *upLevel    : LOW(0)
//             : HIGH(1)
//===============================================================================================//
DWORD    __stdcall AxdoLevelGetOutport(long lOffset, DWORD *upLevel);
//========== Input / Output signal reading / writing
//==Output signal writing
// Output data by bit unit in Offset position of entire output contact module
//===============================================================================================//
// lOffset     : Offset position for output contact
// uLevel      : LOW(0)
//             : HIGH(1)
//===============================================================================================//
DWORD    __stdcall AxdoWriteOutport(long lOffset, DWORD uValue);
// Output data by bit unit in Offset position of specified output contact module
//===============================================================================================//
// lModuleNo   : Number of module
// lOffset     : Offset position for output contact
// uLevel      : LOW(0)
//             : HIGH(1)
//===============================================================================================//
DWORD    __stdcall AxdoWriteOutportBit(long lModuleNo, long lOffset, DWORD uValue);
// Output data by byte unit in Offset position of specified output contact module
//===============================================================================================//
// lModuleNo   : Number of module
// lOffset     : Offset position for output contact
// uValue      : 0x00 ~ 0x0FF(If set bit is '1', It means HIGH, If set bit is '0', It means LOW)
//===============================================================================================//
DWORD    __stdcall AxdoWriteOutportByte(long lModuleNo, long lOffset, DWORD uValue);
// Output data by word unit in Offset position of specified output contact module
//===============================================================================================//
// uValue      : 0x00 ~ 0x0FFFF
// lOffset     : Offset position for output contact
// uValue      : 0x00 ~ 0x0FFFF(If set bit is '1', It means HIGH, If set bit is '0', It means LOW)
//===============================================================================================//
DWORD    __stdcall AxdoWriteOutportWord(long lModuleNo, long lOffset, DWORD uValue);
// Output data by double word unit in Offset position of specified output contact module
//===============================================================================================//
// lModuleNo   : Number of module
// lOffset     : Offset position for output contact
// uValue      : 0x00 ~ 0x0FFFFFFFF(If set bit is '1', It means HIGH, If set bit is '0', It means LOW)
//===============================================================================================//
DWORD    __stdcall AxdoWriteOutportDword(long lModuleNo, long lOffset, DWORD uValue);
//==Output signal reading
// Read data by bit unit in Offset position of entire output contact module
//===============================================================================================//
// lOffset     : Offset position for output contact
// *upLevel    : LOW(0)
//             : HIGH(1)
//===============================================================================================//
DWORD    __stdcall AxdoReadOutport(long lOffset, DWORD *upValue);
// Read data by bit unit in Offset position of specified output contact module
//===============================================================================================//
// lModuleNo   : Number of module
// lOffset     : Offset position for output contact
// *upLevel    : LOW(0)
//             : HIGH(1)
//===============================================================================================//
DWORD    __stdcall AxdoReadOutportBit(long lModuleNo, long lOffset, DWORD *upValue);
// Read data by byte unit in Offset position of specified output contact module
//===============================================================================================//
// lModuleNo   : Number of module
// lOffset     : Offset position for output contact
// *upValue    : 0x00 ~ 0x0FF(Read bit '1' means 'HIGH', Read bit '0' means 'LOW')
//===============================================================================================//
DWORD    __stdcall AxdoReadOutportByte(long lModuleNo, long lOffset, DWORD *upValue);
// Read data by word unit in Offset position of specified output contact module
//===============================================================================================//
// lModuleNo   : Number of module
// lOffset     : Offset position for output contact
// *upValue    : 0x00 ~ 0x0FFFF(Read bit '1' means 'HIGH', Read bit '0' means 'LOW')
//===============================================================================================//
DWORD    __stdcall AxdoReadOutportWord(long lModuleNo, long lOffset, DWORD *upValue);
// Read data by double word unit in Offset position of specified output contact module
//===============================================================================================//
// lModuleNo   : Number of module
// lOffset     : Offset position for output contact
// *upValue    : 0x00 ~ 0x0FFFFFFFF(Read bit '1' means 'HIGH', Read bit '0' means 'LOW')
//===============================================================================================//
DWORD    __stdcall AxdoReadOutportDword(long lModuleNo, long lOffset, DWORD *upValue);
//==Input signal reading
// Read data level by bit unit in Offset position of entire input contact module
//===============================================================================================//
// lOffset     : Offset position for input contact
// *upValue    : LOW(0)
//             : HIGH(1)
//===============================================================================================//
DWORD    __stdcall AxdiReadInport(long lOffset, DWORD *upValue);
// Read data level by bit unit in Offset position of specified input contact module
//===============================================================================================//
// lModuleNo   : Number of module
// lOffset     : Offset position for input contact
// *upValue    : LOW(0)
//             : HIGH(1)
//===============================================================================================//
DWORD    __stdcall AxdiReadInportBit(long lModuleNo, long lOffset, DWORD *upValue);
// Read data level by byte unit in Offset position of specified input contact module
//===============================================================================================//
// lModuleNo   : Number of module
// lOffset     : Offset position for input contact
// *upValue    : 0x00 ~ 0x0FF(Read bit '1' means 'HIGH', Read bit '0' means 'LOW')
//===============================================================================================//
DWORD    __stdcall AxdiReadInportByte(long lModuleNo, long lOffset, DWORD *upValue);
// Read data level by word unit in Offset position of specified input contact module
//===============================================================================================//
// lModuleNo   : Number of module
// lOffset     : Offset position for input contact
// *upValue    : 0x00 ~ 0x0FFFF(Read bit '1' means 'HIGH', Read bit '0' means 'LOW')
//===============================================================================================//
DWORD    __stdcall AxdiReadInportWord(long lModuleNo, long lOffset, DWORD *upValue);
// Read data level by double word unit in Offset position of specified input contact module
//===============================================================================================//
// lModuleNo   : Number of module
// lOffset     : Offset position for input contact
// *upValue    : 0x00 ~ 0x0FFFFFFFF(Read bit '1' means 'HIGH', Read bit '0' means 'LOW')
//===============================================================================================//
DWORD    __stdcall AxdiReadInportDword(long lModuleNo, long lOffset, DWORD *upValue);
//== Only for MLII, M-Systems DIO(R7 series)
// Read data level by bit unit in Offset position of specified extended input contact module
//===============================================================================================//
// lModuleNo   : Module number
// lOffset     : Offset position by bit unit between input index.(0~15)
// *upValue    : LOW(0)
//             : HIGH(1)
//===============================================================================================//
DWORD   __stdcall AxdReadExtInportBit(long lModuleNo, long lOffset, DWORD *upValue);