Library/AXL(Library)/Visual Basic(Net)/AXD.vb


' Verify data level by word unit in Offset position of specified output contact module
'==============================================================================================='
' lModuleNo   : Number of module
' lOffset     : Offset position for output contact
' *upLevel    : 0x00 ~ 0x0FFFF(Read bit '1' means 'HIGH', Read bit '0' means 'LOW')
'==============================================================================================='
Public Declare Function AxdoLevelGetOutportWord Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal lOffset As Integer, ByRef upLevel As Integer) As Integer


' Verify data level by double word unit in Offset position of specified output contact module
'==============================================================================================='
' lModuleNo   : Number of module
' lOffset     : Offset position for output contact
' *upLevel    : 0x00 ~ 0x0FFFFFFFF(Read bit '1' means 'HIGH', Read bit '0' means 'LOW')
'==============================================================================================='
Public Declare Function AxdoLevelGetOutportDword Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal lOffset As Integer, ByRef upLevel As Integer) As Integer


' Set data level by bit unit in Offset position of entire output contact module
'==============================================================================================='
' lOffset     : Offset position for output contact
' uLevel     : LOW(0)
'            : HIGH(1)
'==============================================================================================='
Public Declare Function AxdoLevelSetOutport Lib "AXL.dll" (ByVal lOffset As Integer, ByVal uLevel As Integer) As Integer


' Verify data level by bit unit in Offset position of entire output contact module
'==============================================================================================='
' lOffset     : Offset position for output contact
' *upLevel   : LOW(0)
'            : HIGH(1)
'==============================================================================================='
Public Declare Function AxdoLevelGetOutport Lib "AXL.dll" (ByVal lOffset As Integer, ByRef upLevel As Integer) As Integer


'========== Input / Output signal reading / writing =================================================================================
'==Output signal writing
' Output data by bit unit in Offset position of entire output contact module
'==============================================================================================='
' lOffset     : Offset position for output contact
' uLevel     : LOW(0)
'            : HIGH(1)
'==============================================================================================='
Public Declare Function AxdoWriteOutport Lib "AXL.dll" (ByVal lOffset As Integer, ByVal uValue As Integer) As Integer


' Output data by bit unit in Offset position of specified output contact module
'==============================================================================================='
' lModuleNo   : Number of module
' lOffset     : Offset position for output contact
' uLevel     : LOW(0)
'            : HIGH(1)
'==============================================================================================='
Public Declare Function AxdoWriteOutportBit Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal lOffset As Integer, ByVal uValue As Integer) As Integer


' Output data by byte unit in Offset position of specified output contact module
'==============================================================================================='
' lModuleNo   : Number of module
' lOffset     : Offset position for output contact
' uValue      : 0x00 ~ 0x0FF(If set bit is '1', It means HIGH, If set bit is '0', It means LOW)
'==============================================================================================='
Public Declare Function AxdoWriteOutportByte Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal lOffset As Integer, ByVal uValue As Integer) As Integer


' Output data by word unit in Offset position of specified output contact module
'==============================================================================================='
' uValue     : 0x00 ~ 0x0FFFF
' lOffset     : Offset position for output contact
' uValue      : 0x00 ~ 0x0FFFF(If set bit is '1', It means HIGH, If set bit is '0', It means LOW)
'==============================================================================================='
Public Declare Function AxdoWriteOutportWord Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal lOffset As Integer, ByVal uValue As Integer) As Integer


' Output data by double word unit in Offset position of specified output contact module
'==============================================================================================='
' lModuleNo   : Number of module
' lOffset     : Offset position for output contact
' uValue      : 0x00 ~ 0x0FFFFFFFF(If set bit is '1', It means HIGH, If set bit is '0', It means LOW)
'==============================================================================================='
Public Declare Function AxdoWriteOutportDword Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal lOffset As Integer, ByVal uValue As Integer) As Integer

'==Output signal reading
' Read data by bit unit in Offset position of entire output contact module
'==============================================================================================='
' lOffset     : Offset position for output contact
' *upLevel   : LOW(0)
'            : HIGH(1)
'==============================================================================================='
Public Declare Function AxdoReadOutport Lib "AXL.dll" (ByVal lOffset As Integer, ByRef upValue As Integer) As Integer


' Read data by bit unit in Offset position of specified output contact module
'==============================================================================================='
' lModuleNo   : Number of module
' lOffset     : Offset position for output contact
' *upLevel   : LOW(0)
'            : HIGH(1)
'==============================================================================================='
Public Declare Function AxdoReadOutportBit Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal lOffset As Integer, ByRef upValue As Integer) As Integer


' Read data by byte unit in Offset position of specified output contact module
'==============================================================================================='
' lModuleNo   : Number of module
' lOffset     : Offset position for output contact
' *upValue    : 0x00 ~ 0x0FF(Read bit '1' means 'HIGH', Read bit '0' means 'LOW')
'==============================================================================================='
Public Declare Function AxdoReadOutportByte Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal lOffset As Integer, ByRef upValue As Integer) As Integer


' Read data by word unit in Offset position of specified output contact module
'==============================================================================================='
' lModuleNo   : Number of module
' lOffset     : Offset position for output contact
' *upValue    : 0x00 ~ 0x0FFFF(Read bit '1' means 'HIGH', Read bit '0' means 'LOW')
'==============================================================================================='
Public Declare Function AxdoReadOutportWord Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal lOffset As Integer, ByRef upValue As Integer) As Integer


' Read data by double word unit in Offset position of specified output contact module
'==============================================================================================='
' lModuleNo   : Number of module
' lOffset     : Offset position for output contact
' *upValue    : 0x00 ~ 0x0FFFFFFFF(Read bit '1' means 'HIGH', Read bit '0' means 'LOW')
'==============================================================================================='
Public Declare Function AxdoReadOutportDword Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal lOffset As Integer, ByRef upValue As Integer) As Integer

' ==Input signal reading
' Read data level by bit unit in Offset position of entire input contact module
'==============================================================================================='
' lOffset     : Offset position for input contact
' *upValue   : LOW(0)
'            : HIGH(1)
'==============================================================================================='
Public Declare Function AxdiReadInport Lib "AXL.dll" (ByVal lOffset As Integer, ByRef upValue As Integer) As Integer


' Read data level by bit unit in Offset position of specified input contact module
'==============================================================================================='
' lModuleNo   : Number of module
' lOffset     : Offset position for input contact
' *upValue   : LOW(0)
'            : HIGH(1)
'==============================================================================================='
Public Declare Function AxdiReadInportBit Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal lOffset As Integer, ByRef upValue As Integer) As Integer


' Read data level by byte unit in Offset position of specified input contact module
'==============================================================================================='
' lModuleNo   : Number of module
' lOffset     : Offset position for input contact
' *upValue    : 0x00 ~ 0x0FF(Read bit '1' means 'HIGH', Read bit '0' means 'LOW')
'==============================================================================================='
Public Declare Function AxdiReadInportByte Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal lOffset As Integer, ByRef upValue As Integer) As Integer


' Read data level by wordt unit in Offset position of specified input contact module
'==============================================================================================='
' lModuleNo   : Number of module
' lOffset     : Offset position for input contact
' *upValue    : 0x00 ~ 0x0FFFF(Read bit '1' means 'HIGH', Read bit '0' means 'LOW')
'==============================================================================================='
Public Declare Function AxdiReadInportWord Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal lOffset As Integer, ByRef upValue As Integer) As Integer


' Read data level by double word unit in Offset position of specified input contact module
'==============================================================================================='
' lModuleNo   : Number of module
' lOffset     : Offset position for input contact
' *upValue    : 0x00 ~ 0x0FFFFFFFF(Read bit '1' means 'HIGH', Read bit '0' means 'LOW')
'==============================================================================================='
Public Declare Function AxdiReadInportDword Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal lOffset As Integer, ByRef upValue As Integer) As Integer



'== Only for MLII, M-Systems DIO(R7 series)
' Read data level by bit unit in Offset position of specified extended input contact module
'==============================================================================================='
' lModuleNo   : Module number
' lOffset     : Offset position by bit unit between input index.(0~15)
' *upValue    : LOW(0)
'             : HIGH(1)
'==============================================================================================='
Public Declare Function AxdReadExtInportBit Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal lOffset As Integer, ByRef upValue As Integer) As Integer

